--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,37 +7,13 @@
 	"context": "..",
 
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-	"dockerFile": "../Dockerfile",
+	"dockerComposeFile": "../docker-compose.yml",
 
-	// The optional 'runArgs' property can be used to specify additional runtime arguments.
-	"runArgs": [
-		// Uncomment the next line to use Docker from inside the container. See https://aka.ms/vscode-remote/samples/docker-in-docker for details.
-		// "-v","/var/run/docker.sock:/var/run/docker.sock",
-
-		// Uncomment the next line if you will be using a ptrace-based debugger like C++, Go, and Rust.
-		// "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"
-
-		// You may want to add a non-root user to your Dockerfile. On Linux, this will prevent
-		// new files getting created as root. See https://aka.ms/vscode-remote/containers/non-root-user
-		// for the needed Dockerfile updates and then uncomment the next line.
-		// "-u", "vscode"
-	],
-
-	// Use 'settings' to set *default* container specific settings.json values on container create. 
-	// You can edit these settings after create using File > Preferences > Settings > Remote.
-	"settings": { 
-		// This will ignore your local shell user setting for Linux since shells like zsh are typically 
-		// not in base container images. You can also update this to an specific shell to ensure VS Code 
-		// uses the right one for terminals and tasks. For example, /bin/bash (or /bin/ash for Alpine).
-		"terminal.integrated.shell.linux": null
-	},
-
-	// Uncomment the next line if you want to publish any ports.
-	// "appPort": [],
-
-	// Uncomment the next line to run commands after the container is created - for example installing git.
-	// "postCreateCommand": "apt-get update && apt-get install -y git",
-
-	// Add the IDs of extensions you want installed when the container is created in the array below.
-	"extensions": ["ms-python.python"]
+	  // "postCreateCommand": "python --version",
+	  "service": "app", // You must define which service you are going to use from docker compose.
+	  "workspaceFolder": "/app", // path to your source inside docker file
+	  "extensions": [
+		// extensions which is going to be installed inside the docker environment
+		"ms-python.python"
+	  ]
 }
